--- a/src/avatars/avatars.html
+++ b/src/avatars/avatars.html
@@ -16,44 +16,44 @@
     <div class="avatar-container" role="list" aria-label="사용자 아바타 목록">
       <div class="avatar-box">
         <div class="avatar graycircle" role="listitem" aria-label="아바타 1, 회색 상태">
-          <img src="/src/avatars/images/face1.jpg" alt="아바타 1" />
+          <img src="./src/avatars/images/face1.jpg" alt="아바타 1" />
           <span class="circle" aria-hidden="true"></span>
         </div>
 
         <div class="avatar greencircle" role="listitem" aria-label="아바타 2, 초록색 상태">
-          <img src="/src/avatars/images/face2.jpg" alt="아바타 2" />
+          <img src="./images/face2.jpg" alt="아바타 2" />
           <span class="circle" aria-hidden="true"></span>
         </div>
 
         <div class="avatar graycircle" role="listitem" aria-label="아바타 3, 회색 상태">
-          <img src="/src/avatars/images/face3.jpg" alt="아바타 3" />
+          <img src="./images/face3.jpg" alt="아바타 3" />
           <span class="circle" aria-hidden="true"></span>
         </div>
 
         <div class="avatar greencircle" role="listitem" aria-label="아바타 4, 초록색 상태">
-          <img src="/src/avatars/images/face4.jpg" alt="아바타 4" />
+          <img src="./images/face4.jpg" alt="아바타 4" />
           <span class="circle" aria-hidden="true"></span>
         </div>
       </div>
 
       <div class="avatar-box">
         <div class="avatar greencircle" role="listitem" aria-label="아바타 5, 초록색 상태">
-          <img src="/src/avatars/images/face5.jpg" alt="아바타 5" />
+          <img src="./images/face5.jpg" alt="아바타 5" />
           <span class="circle" aria-hidden="true"></span>
         </div>
 
         <div class="avatar greencircle" role="listitem" aria-label="아바타 6, 초록색 상태">
-          <img src="/src/avatars/images/face6.jpg" alt="아바타 6" />
+          <img src="./images/face6.jpg" alt="아바타 6" />
           <span class="circle" aria-hidden="true"></span>
         </div>
 
         <div class="avatar graycircle" role="listitem" aria-label="아바타 7, 회색 상태">
-          <img src="/src/avatars/images/face7.jpg" alt="아바타 7" />
+          <img src="./images/face7.jpg" alt="아바타 7" />
           <span class="circle" aria-hidden="true"></span>
         </div>
 
         <div class="avatar graycircle" role="listitem" aria-label="아바타 8, 회색 상태">
-          <img src="/src/avatars/images/face8.jpg" alt="아바타 8" />
+          <img src="./images/face8.jpg" alt="아바타 8" />
           <span class="circle" aria-hidden="true"></span>
         </div>
       </div>
