avatars.html 경로 수정

--- a/src/avatars/avatars.html
+++ b/src/avatars/avatars.html
@@ -16,7 +16,7 @@
     <div class="avatar-container" role="list" aria-label="사용자 아바타 목록">
       <div class="avatar-box">
         <div class="avatar graycircle" role="listitem" aria-label="아바타 1, 회색 상태">
-          <img src="./src/avatars/images/face1.jpg" alt="아바타 1" />
+          <img src="./images/face1.jpg" alt="아바타 1" />
           <span class="circle" aria-hidden="true"></span>
         </div>
 
