세 번째 과제: 로그인 + 회고

--- a/src/login/preview/preview.html
+++ b/src/login/preview/preview.html
@@ -27,7 +27,7 @@
       <li><a href="./mouse.html">마우스로 접근 시</a></li>
       <li><a href="./keyboard.html">키보드로 접근 시</a></li>
       <li><a href="./error.html">에러 처리 (자바스크립트 사용하지 않음)</a></li>
-      <li><a href="./link.html">IP보완 링크 선택 시</a></li>
+      <li><a href="./link.html">IP 보안 링크 선택 시</a></li>
     </ul>
   </body>
 </html>
