--- a/src/login/preview/link.html
+++ b/src/login/preview/link.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>IP보완 링크 선택 시</title>
+    <title>IP보안 링크 선택 시</title>
   </head>
 
   <body>
-    <h1>IP보완 링크 선택 시</h1>
+    <h1>IP 보안 링크 선택 시</h1>
     <figure>
       <img src="./images/link.gif" alt="" />
-      <figcaption>IP보완 링크 선택 시</figcaption>
+      <figcaption>IP 보안 링크 선택 시</figcaption>
     </figure>
   </body>
 </html>
